<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegistroActivity"
    android:padding="24dp"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="236dp"
        android:hint="@string/hint_nombre"
        android:textColorHint="@color/gris_hint"
        android:textColor="@color/negro"
        android:textSize="16sp"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_selector"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:hint="@string/hint_email"
        android:textColorHint="@color/gris_hint"
        android:textColor="@color/negro"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_selector"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        app:layout_constraintTop_toBottomOf="@id/etNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etClave"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:hint="@string/hint_password"
        android:textColorHint="@color/gris_hint"
        android:textColor="@color/negro"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:background="@drawable/edittext_selector"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        app:layout_constraintTop_toBottomOf="@id/etCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:backgroundTint="@color/verde_gnova"
        android:textColor="@color/blanco"
        app:layout_constraintTop_toBottomOf="@id/etClave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_ir_login"
        android:backgroundTint="@color/negro"
        android:textColor="@color/blanco"
        app:layout_constraintTop_toBottomOf="@id/btnRegistrarse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="278dp"
        android:layout_height="157dp"
        app:layout_constraintBottom_toTopOf="@+id/etNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>