<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity"
    android:padding="24dp"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="224dp"
        android:hint="@string/hint_email"
        android:textColorHint="@color/gris_hint"
        android:textColor="@color/negro"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_selector"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:hint="@string/hint_password"
        android:textColorHint="@color/gris_hint"
        android:textColor="@color/negro"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:background="@drawable/edittext_selector"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/verde_gnova"
        android:text="@string/btn_login"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="178dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/negro"
        android:text="@string/btn_register"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="260dp"
        android:layout_height="196dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>