<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ConfiguracionAdminActivity">

    <TextView
        android:id="@+id/tvTituloConfig"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="@string/titulo_configuracion"
        android:textColor="@color/negro"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCambiarClave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cambiar_clave"
        android:backgroundTint="@color/verde_gnova"
        android:textColor="@color/blanco"
        app:layout_constraintTop_toBottomOf="@id/tvTituloConfig"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cerrar_sesion"
        android:backgroundTint="@color/negro"
        android:textColor="@color/blanco"
        app:layout_constraintTop_toBottomOf="@id/btnCambiarClave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="191dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTituloConfig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489"
        app:srcCompat="@drawable/icono_conf" />

</androidx.constraintlayout.widget.ConstraintLayout>
