<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioAdminActivity"
    android:padding="24dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tvTituloAdmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:gravity="center"
        android:text="@string/titulo_admin"
        android:textColor="@color/negro"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVerProductos"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/verde_gnova"
        android:text="@string/btn_ver_productos"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloAdmin" />

    <Button
        android:id="@+id/btnAgregarProducto"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/verde_gnova"
        android:text="@string/btn_agregar_producto"
        android:textColor="@color/blanco"
        app:layout_constraintBottom_toTopOf="@+id/btnConfiguracion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnVerProductos"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnConfiguracion"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/negro"
        android:text="@string/btn_configuracion"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="473dp" />

    <!-- Botón temporal para inicializar productos de ejemplo -->
    <Button
        android:id="@+id/btnInicializarEjemplos"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/verde_gnova"
        android:text="Inicializar Productos"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnConfiguracion" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="204dp"
        android:layout_height="157dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTituloAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>